code changes for fixes